[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.0.1", features = [
    "cosmwasm_1_4",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
protobuf = { version = "3.5.0", features = ["with-bytes"] }
clap = { version = "4.5.16", features = ["derive"] }

[dependencies.lp-token]
package = "lp-token"
path = "../contracts/lp-token"

[dependencies.yield-ward]
package = "yield-ward"
path = "../contracts/yield-ward"

[dev-dependencies]
cw-multi-test = { version = "2.1.0", features = ["cosmwasm_1_4"] }
