[package]
name = "lp-token"
version = "0.1.0"
edition = "2021"
description = "LP implementation of a CosmWasm-20 compliant token"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "2.0.1"
cosmwasm-std = { version = "2.0.1", features = [
    "cosmwasm_1_3",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
protobuf = { version = "3.5.0", features = ["with-bytes"] }
cw20 = "2.0.0"
semver = "1.0.23"

[dev-dependencies]
cw-multi-test = "2.0.0"
cw-utils = "2.0.0"
